# otus-cpp-hw-06

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: BaseDimension.h  CMakeLists.txt  Dimension.h  DimensionIterator.h  ElementHolder.h  Matrix.h  MatrixForwardIterator.h  MatrixType.h  MatrixUtils.h  main.cpp
test/: CMakeLists.txt  MatrixTest.cpp
